--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,5 +1,9 @@
 // Variables
 
+$background: #F2F1F1;
 $light-grey: #ccc;
-$text-color: #222;
+$text-color: #CCB89C;
+$brown: #675B57;
 
+//font-stacks
+$raleway: 'Raleway', sans-serif;
